--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ html, body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .sticky {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
   }
@@ -25,10 +27,8 @@ html, body{
     height: fit-content;
     margin-top: 0px;
     padding: 8 10 5 10px;
+    background: linear-gradient(0deg, black, white);
 }
-.sticky + .content {
-    padding-top: 60px;
-  }
 .Header {
     display: flex;
     align-items: center;
@@ -38,10 +38,11 @@ html, body{
     font-family: 'Kalam';
     margin-bottom: -15px;
     font-size: 60px;
+    margin-top: 50px;
 }
 .Header p {
     font-family: 'Ysabeau';
-    margin-bottom: 11px;
+    margin-bottom: 20px;
     margin-top: 7px;
     font-size: 25px;
     font-weight: 600;
@@ -76,7 +77,7 @@ html, body{
 }
 .lcont span{
     font-family: 'Dancing Script';
-    font-size: 40px;
+    font-size: 45px;
 }
 .lcont ul{
     font-weight: bold;
